# Floyd-algorithm-parallel-computing

./: .gitignore  CMakeLists.txt  README.md  compare.py  graph_viz.c  load_settings.sh  matrix.txt  matrix_diff.txt  matrix_output.txt  mpi_working.c  nodes  py_floyd.py
include/: floyd.h  read_and_distribute_matrix.h  utilities.h
src/: floyd.c  graph_viz.c  main.c  mpi_floyd.c  read_and_distribute_matrix.c  upc_floyd.c  utilities.c  vis.c
